<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Sign</string>
    <string name="action_settings">Preferences</string>
    <string name="title_home">Home</string>
    <string name="title_markets">Markets</string>
    <string name="title_hotstocks">Hot Stocks</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello">HelloWorld</string>
    <string name="search_hint">Search Stock Ticker</string>
    <string name="search_label">Searcher</string>
    <string name="search_button">Search</string>
    <string name="search_title">stockSearch</string>
    <string name="search_global_description">Search for Stocks</string>
    <string name="title_news">News</string>
    <string name="title_dummy">Dummy</string>
    <string name="action_aboutus">About</string>
    <string name="button_showdata">Show Data</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>

    <string-array name="types">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
    <string-array name="types_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_change">Percent Change</string>
    <string name="title_price">Price</string>
    <string name="title_company">Company</string>
    <string name="title_market">Market</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_ticker">Ticker</string>
    <string name="title_score">Score</string>
    <string name="title_country">Country</string>
    <string name="title_sector">Sector</string>
    <string name="title_industry">Industry</string>
    <string name="title_ratio">Ratio</string>
    <string name="title_value">Value</string>
    <string name="title_total_score">Total Score</string>
    <string name="title_div_score">Dividend Score</string>
    <string name="title_growth_score">Growth Score</string>
    <string name="row_total_score">Total Score (Rank)</string>
    <string name="row_div_score">Dividend Score (Rank)</string>
    <string name="row_growth_score">Growth Score (Rank)</string>
    <string name="add_to_portfolio">Add To Portfolio</string>
    <string name="remove_from_portfolio">Remove From Portfolio</string>
    <string name="loading">Loading...</string>
    <string name="portfolio_description">Add this stock to your portfolio</string>
    <string name="add_stock">Add a Stock</string>
    <string name="score_total">Total</string>
    <string name="score_div">Dividend</string>
    <string name="score_growth">Growth</string>
    <string name="data_missing">missing</string>
    <string name="data_null">null</string>
    <string name="period_prompt">Choose Time Period</string>

    <string-array name="chart_periods">
        <item name="1m">1m</item>
        <item name="3m">3m</item>
        <item name="6m">6m</item>
        <item name="1y">1y</item>
        <item name="2y">2y</item>
        <item name="3y">3y</item>
    </string-array>
    <string-array name="chart_indicators">
        <item>MACDsum</item>
        <item>MACDslope</item>
        <item>CMFInd</item>
        <item>Vortex</item>
    </string-array>

    <string name="title_display">Display</string>
    <string name="title_indicator">Ind</string>
    <string name="title_indicators">Indicators</string>

</resources>