<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tlStockMainData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:id="@+id/tlStockHeadline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStockname"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_span="3"
                android:gravity="left"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tlStockHeadline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStockticker"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_span="3"
                android:gravity="left"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/trStockCountryRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStockCountryWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_span="1"
                android:gravity="left"
                android:orientation="vertical"
                android:text="@string/title_country" >
            </TextView>

            <TextView
                android:id="@+id/tvStockCountryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="left"
                android:orientation="vertical" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/trStockSectorRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStockSectorWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_span="1"
                android:gravity="left"
                android:orientation="vertical"
                android:text="@string/title_sector" >
            </TextView>

            <TextView
                android:id="@+id/tvStockSectorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="left"
                android:orientation="vertical" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/trStockIndustryRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStockIndustryWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_span="1"
                android:gravity="left"
                android:orientation="vertical"
                android:text="@string/title_industry" >
            </TextView>

            <TextView
                android:id="@+id/tvStockIndustryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="left"
                android:orientation="vertical" >
            </TextView>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dip"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#B0171F" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:id="@+id/tlStockratios"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="0,1,2" >

            <TableRow
                android:id="@+id/trStockDataMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvStockRatioName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_span="1"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:text="@string/title_ratio" >
                </TextView>

                <TextView
                    android:id="@+id/tvStockRatioValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_span="1"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:text="@string/title_value" >
                </TextView>

                <TextView
                    android:id="@+id/tvStockSectorAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_span="1"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:text="@string/title_sector" >
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>