<?xml version="1.0" encoding="utf-8"?>
<ScrollView     xmlns:android="http://schemas.android.com/apk/res/android"
    			xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
<LinearLayout 
    android:weightSum="100"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$MarketSectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:textStyle="bold"
        android:textSize="25sp"
        
         ></TextView>
    <TextView
        android:id="@+id/timeperiod_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center" 
        
         ></TextView>
      <View
            android:layout_width="wrap_content"
            android:layout_height="5dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#B0171F" />
        
                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                                <ImageView
                                        android:id="@+id/MarketChart"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"/>


</LinearLayout>
       

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2" >
                
                <TableRow
                android:id="@+id/tabletitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" >
                                   
                <TextView
                    android:text="@string/title_market"
                    android:layout_column="0"
                    android:layout_gravity="center"          
                    android:textSize="18sp"
                    android:textStyle="bold"
                     />

                <TextView
                    android:text="@string/title_price"
                    android:layout_gravity="center"
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                     />

                <TextView
                          android:text="@string/title_change"
                          android:layout_gravity="center"
                          android:layout_column="2"
                          android:textSize="18sp"
                          android:textStyle="bold"
                         />
                      
            </TableRow>
            <View
        android:layout_height="2dip"
        android:background="#C0C0C0" ></View>
            
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_marginTop="@dimen/table_margin"
                android:layout_marginBottom="@dimen/table_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" >
                                   
                <TextView
                    android:id="@+id/dow_name"
                    android:layout_column="0"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                     />

                <TextView
                    android:id="@+id/dow_change"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_column="1"
                     />

                <TextView
                          android:id="@+id/dow_close"
                          android:textSize="14sp"
                          android:layout_gravity="center"
                          android:layout_column="2"
                         />
                      
            </TableRow>
            
             <View
                 android:layout_height="2dip"
                 android:background="#C0C0C0" />
             
                   <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginTop="@dimen/table_margin"
            android:layout_marginBottom="@dimen/table_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
                                   
                <TextView 
            android:id="@+id/sp_name"    
            android:textSize="14sp" 
            android:layout_gravity="center"
            android:layout_column="0"/>
                <TextView 
            android:id="@+id/sp_change"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_column="1"/>
                      <TextView 
            android:id="@+id/sp_close"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_column="2"/>
                      
            </TableRow>
            
             <View
        android:layout_height="2dip"
        android:background="#C0C0C0" />
             
            <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginTop="@dimen/table_margin"
            android:layout_marginBottom="@dimen/table_margin"
       		 android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
                                   
                <TextView 
                android:layout_column="0"
            android:id="@+id/nasdaq_name"
            android:textSize="14sp"     
            android:layout_gravity="center"/>
                <TextView 
                android:layout_column="1"
            android:id="@+id/nasdaq_change"
            android:textSize="14sp"
            android:layout_gravity="center"
            />
                      <TextView 
                      android:layout_column="2"
            android:id="@+id/nasdaq_close"
            android:textSize="14sp"
            android:layout_gravity="center"/>
                      
            </TableRow>
            
             <View
        android:layout_height="2dip"
        android:background="#C0C0C0" />
            
        </TableLayout>
</RelativeLayout>
</LinearLayout>
</ScrollView>