<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context=".MainActivity$RatiosSectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dip"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#B0171F" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Total Score -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/table_imagegap"
                android:stretchColumns="0,1" >

                <TableRow
                    android:id="@+id/trHotTotalScore0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:text="@string/title_company"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvHotTotalScoreTitle"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:clickable="true"
                        android:text="@string/title_total_score"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" >
                </View>

                <TableRow
                    android:id="@+id/trHotTotalScore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/tvHotTotalScoreTicker1"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotTotalScore1"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotTotalScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotTotalScoreTicker2"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotTotalScore2"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotTotalScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotTotalScoreTicker3"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotTotalScore3"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />
            </TableLayout>
            <!-- Dividend Score -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/table_imagegap"
                android:stretchColumns="0,1" >

                <TableRow
                    android:id="@+id/trHotDivScore0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:text="@string/title_company"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvHotDivScoreTitle"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:clickable="true"
                        android:text="@string/title_div_score"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" >
                </View>

                <TableRow
                    android:id="@+id/trHotDivScore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/tvHotDivScoreTicker1"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotDivScore1"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotDivScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotDivScoreTicker2"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotDivScore2"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotDivScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotDivScoreTicker3"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotDivScore3"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />
            </TableLayout>
            <!-- Growth Score -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/table_imagegap"
                android:stretchColumns="0,1" >

                <TableRow
                    android:id="@+id/trHotGrowthScore0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:text="@string/title_company"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvHotGrowthScoreTitle"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:clickable="true"
                        android:text="@string/title_growth_score"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" >
                </View>

                <TableRow
                    android:id="@+id/trHotGrowthScore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/tvHotGrowthScoreTicker1"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotGrowthScore1"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotGrowthScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotGrowthScoreTicker2"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotGrowthScore2"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />

                <TableRow
                    android:id="@+id/trHotGrowthScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/table_margin"
                    android:layout_marginTop="@dimen/table_margin" >

                    <TextView
                        android:id="@+id/tvHotGrowthScoreTicker3"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:background="@android:drawable/list_selector_background"
                        android:text="@string/data_missing"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHotGrowthScore3"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:text="@string/data_null"
                        android:textSize="18sp" />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#C0C0C0" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>